# fastapi_llmops_demo_2026

./: README.md
customer_support/: pyproject.toml
customer_support/src/customer_support/backend/: agents.py  api.py  constants.py
customer_support/src/customer_support/monitoring/: mlflow.db  promt.ipynb
